...
                                shape = SegmentedButtonDefaults.itemShape(index, AccountType.entries.size),
                                selected = accountType == type,
                                onClick = { onAccountTypeChange(type) }
                            ) {
                                Text(
                                    text = when (type) {
                                        AccountType.EXPLORER -> "Participant"
                                        AccountType.BUSINESS -> "Organizer"
                                    }
                                )
                            }
                        }
                    }
...
